fix white space

--- a/assets/css/parallax.css
+++ b/assets/css/parallax.css
@@ -10,7 +10,7 @@ h1 {
   color: black;
   text-transform: uppercase;
   letter-spacing: 1%;
-  margin: 20% 0;
+  margin: 10% 0;
 }
 
 h2 {
